--- a/views/user/reset.ejs
+++ b/views/user/reset.ejs
@@ -9,13 +9,13 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
-        <form action="/auth/signup" method="POST">
+        <form action="/auth/reset" method="POST">
             <label for="email">Email</label>
             <input type="text" placeholder="Enter email" name="email" required>
-            <label for="password">Password</label>
-            <input type="password" placeholder="Enter password" name="password" required>
-            <button type="submit">Sign up</button>
+            <button type="submit">Submit</button>
+            <p>The reset link will be sent to you.</p>
         </form>
+
         <script src="" async defer></script>
     </body>
 </html>
