--- a/views/user/setpassword.ejs
+++ b/views/user/setpassword.ejs
@@ -3,18 +3,17 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Login</title>
+        <title>Reset</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="">
     </head>
     <body>
-        <form action="/auth/signup" method="POST">
-            <label for="email">Email</label>
-            <input type="text" placeholder="Enter email" name="email" required>
+        <form action="/auth/reset/confirm/<%=token%>" method="POST">
+          
             <label for="password">Password</label>
             <input type="password" placeholder="Enter password" name="password" required>
-            <button type="submit">Sign up</button>
+            <button type="submit">Submit</button>
         </form>
         <script src="" async defer></script>
     </body>
